fix spacing

--- a/myself/src/components/side-navbar-list/side-navbar-list.styles.scss
+++ b/myself/src/components/side-navbar-list/side-navbar-list.styles.scss
@@ -1,3 +1,3 @@
 .nav-list {
-    margin-top: 20px;
+    // margin-top: 20px;
 }
